2011-09-02  Gary Funck  <gary@intrepid.com>

	Align UPC pointers-to-shared, only if the target enforces
	strict alignment.
	* upc-pts-struct.c (upc_pts_struct_init_type): Align a
	UPC pointer-to-shared type, only if the target requires
	strict alignment.
	* upc-act.c (upc_cpp_builtins): Output pre-defined macro,
	__UPC_PTS_ALIGN__, only if the target requires strict alignment.

2011-08-29  Gary Funck  <gary@intrepid.com>

	Implement a hash table to record UPC block factors.
	* upc-act.c (upc_block_factor_for_type): New garbage-collected
	hash table.
	(upc_lang_init, upc_finish): Move to end of source file.
	(upc_lang_init): create  upc_block_factor_for_type hash table.
	(upc_block_factor_lookup, upc_block_factor_insert): New.
	(upc_grok_layout_qualifier, upc_lang_layout_decl, upc_pts_int_sum):
	Rename UPC_TYPE_HAS_THREADS_FACTOR() to TYPE_HAS_THREADS_FACTOR().
	(upc_grok_layout_qualifier): convert blocking factor to sizetype
	before checking for equality to element type's blocking factor.

2011-08-28  Gary Funck  <gary@intrepid.com>

	Re-work the type machinery to fully support and to unify support
	for the UPC layout qualifier (blocking factor).
	* upc-genericize.c (upc_simplify_shared_ref): Call
	c_build_qualified_type_1() instead of upc_set_block_factor()
	to assert a zero blocking factor.
	* upc-pts-struct.c (upc_pts_struct_init_type): Call
	c_build_qualified_type_1() to build predefined shared
	qualified types, instead of build_variant_type_copy().
	* upc-pts-packed.c (upc_pts_packed_init_type): Call
	c_build_qualified_type_1() to build predefined shared
	qualified types, instead of build_variant_type_copy().
	* upc-act.c (upc_set_block_factor): Delete.
	(upc_grok_layout_qualifier): Rename from upc_apply_layout_qualifier().
	Rework logic so that it returns a blocking factor rather than
	a qualified type.  Add 'loc' argument and call error_at().
	Add an ELEM_BLOCK_FACTOR argument and Implement logic that merges