@@ -87,11 +87,9 @@ upc_pts_struct_init_type (void)
   struct c_struct_parse_info *null_struct_parse_info = NULL;
   int save_pedantic = pedantic;
   ref = start_struct (loc, RECORD_TYPE, name, &null_struct_parse_info);
-  if (STRICT_ALIGNMENT)
-    {
-      /* Ensure that shared pointers have twice the alignment of a pointer.  */
-      TYPE_ALIGN (ref) = 2 * TYPE_ALIGN (ptr_type_node);
-    }
+  /* Ensure that shared pointers have twice the alignment of a pointer.  */
+  TYPE_ALIGN (ref) = 2 * TYPE_ALIGN (ptr_type_node);
+  TYPE_USER_ALIGN (ref) = 1;
   name = get_identifier ("vaddr");
   upc_vaddr_field_node = build_decl (loc, FIELD_DECL, name,
 				     build_pointer_type (char_type_node));
