@@ -1,3 +1,13 @@
+2011-09-07  Gary Funck  <gary@intrepid.com>
+
+	Ensure that UPC pointer-to-shared type alignment is
+	propagated to the final type.  Revert to long-standing
+	alignment policy: twice the size of a "C" pointer.
+	* upc-pts-struct.c (upc_pts_struct_init_type): Ensure that
+	shared pointers have twice the alignment of a pointer.
+	* upc-act.c (upc_cpp_builtins): Unconditionally emit
+	the definition of __UPC_PTS_ALIGN__.
+
 2011-09-02  Gary Funck  <gary@intrepid.com>
 
 	Align UPC pointers-to-shared, only if the target enforces
